k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clemvion
  labels:
    app.kubernetes.io/name: clemvion
